--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ requires-python = ">=3.12"
 
 dependencies = [
     "easyocr>=1.7.2",
+    "firecrawl-py>=2.12.0",
     "pillow>=11.2.1",
     "pytesseract>=0.3.13",
     "pytest>=8.0.0",
     "python-decouple>=3.8",
+    "rich>=14.0.0",
 ]
 
 [project.optional-dependencies]
